@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix so valid and set date.timezone is not required by installer checks (#1489180)
 - Canonize boolean ini_get() results (#1489189)
 - Fix so install do not fail when one of DB driver checks fails but other drivers exist (#1489178)
 - Fix so exported vCard specifies encoding in v3-compatible format (#1489183)
